--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>O-Sanu-Chat</h1>
+    <main>
+        <h1>O-Sanu-Chat</h1>
+        <ul id="message">
+            <li>Hello! Test message</li>
+        </ul>
+        <form id="form">
+            <input type="text" id = "input" placeholder = "Enter...">
+            <input type="submit" class = "submit" value = "Send">
+        </form>
+    </main>
 </body>
 <script src="script.js"></script>
 </html>
