--- a/static/index.html
+++ b/static/index.html
@@ -8,16 +8,18 @@
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
 </head>
 <body>
-    <main>
+    <header class="header">
         <h1>O-Sanu-Chat</h1>
-        <ul id="message">
-            <li>Hello! Test message</li>
-        </ul>
-        <form id="form">
-            <input type="text" id = "input" placeholder = "Enter...">
-            <input type="submit" class = "submit" value = "Send">
-        </form>
-    </main>
+        <button onclick="changeNickname()">Change Nickname</button>
+    </header>
+    <ul id="messages">
+        <li>Test Message</li>
+        <li>Hello! This is test message</li>
+    </ul>
+    <form id="form">
+        <input type="text" id="input" placeholder="Type your message here...">
+        <input type="submit" class="submit" value="Send">
+    </form>
 </body>
 <script src="script.js"></script>
 </html>
