--- a/static/login.html
+++ b/static/login.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <header class="header">
-            <h1>RoboChat</h1>
+            <h1>O-Sanu-chat</h1>
         </header>
         <form class="register-form" id="login-form">
             <div class="register-form__container">
